# cornserve

./: .dockerignore  .gitignore  README.md  mkdocs.yml
benchmark/: .gitignore  app_utils.py  benchmark_backend.py  benchmark_cornserve.py  benchmark_dataset.py  cornserve_benchmark.py  cornserve_utils.py  image_utils.py  run_compare.py  run_hol_benchmark.py  run_internvl_1b.py  run_output_hol_benchmark.py  schema.py  test_32b_compare.py  test_32b_tput.py  utils.py
docker/: dev.Dockerfile  eric.Dockerfile  gateway.Dockerfile  geri.Dockerfile  huggingface.Dockerfile  resource-manager.Dockerfile  sidecar.Dockerfile  task-dispatcher.Dockerfile  task-manager.Dockerfile  vllm-omni-talker.Dockerfile  vllm.Dockerfile
docs/: index.md  supported_models.md
examples/: encoder_sharing.py  gemmarena.py  internvl_1b.py  mllm.py  notebook.ipynb  qwen3_omni.py  qwen_image.py  qwen_image_huggingface.py  qwen_omni.py  qwen_omni_huggingface.py  stream_transform.py
profiles/: llmembedtask-qwen2.5-vl-7b.json  llmembedtask-qwen3-omni-thinker.json  llmunittask-gemma-3-27b.json  (+4 more)
python/: pyproject.toml
tasklib/: README.md  pyproject.toml
tasklib/cornserve_tasklib/: __init__.py
tasklib/cornserve_tasklib/task/: __init__.py
tasklib/cornserve_tasklib/task/composite/: __init__.py  llm.py  omni.py
tasklib/cornserve_tasklib/task/unit/: __init__.py  encoder.py  generator.py  huggingface.py  llm.py  omni.py
tasklib/cornserve_tasklib/task_executors/: __init__.py
tasklib/cornserve_tasklib/task_executors/descriptor/: __init__.py  encoder.py  generator.py  huggingface.py  llm.py  omni.py
(+205 files in other folders)
